# cobuilder-harness

./: .gitignore  API_README.md  ARCHITECTURE.md  CLAUDE.md  E0-IMPL-PIPELINE-PROGRESS-MONITOR-SUMMARY.md  IMPLEMENTATION_VERIFICATION_E3.md  README.md  dead_worker_detection_research.md  guardian-workflow.md  launch_cobuilder.sh  phase0-prd-design.md  prd_contract_validator.py  private.pem  pyproject.toml  requirements.txt  research_feedback_and_verification_loops.md  test_api.py  test_compute_sd_hash.py  test_dispatch_worker.py  test_pipeline.dot  test_pipeline_fixed.dot
.beads/: issues.jsonl
.claude/: .gitignore  capability_model.json  settings.json  statusline_analyzer.py
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: backend-solutions-engineer.md  frontend-dev-expert.md  (+6 more)
.repomap/: config.yaml
cobuilder/: CLAUDE.md  bridge.py  cli.py  dirs.py
docs/: ARCHITECTURE.md  PRD-SYSTEM3-ORCHESTRATOR-AUTONOMY-001.md  ZEROREPO_DELTA_DESIGN.md  ZEROREPO_SERENA_DESIGN.md  agent-schema.md  prd-contract-template.md
documentation/: NATIVE-TEAMS-EPIC1-FINDINGS.md  VALIDATION_AGENT_MONITOR_MODE.md
src/: api.py  api_endpoint.py
state/: ADD-TWO-NUMBERS-bs.md  test_add_numbers.py
tests/: conftest.py  test_api_endpoint.py  test_e2_completion.py  test_e5_publication.py  test_e71_worker_prompt.py  test_e72_pipeline_runner.py  test_spawn_orchestrator.py
utils/: advisory-report.sh  commit-range.sh  doc-cleanup.sh  document-lifecycle.sh
validation/: MONITOR_MODE_QUICK_START.md  README.md  validation-agent-monitor.py  validation-request-protocol.md
(+642 files in other folders)
