[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobuilder"
version = "0.1.0"
description = "CoBuilder: unified codebase intelligence (repomap + pipeline + agents)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "litellm>=1.0",
    "jinja2>=3.1",
    "chromadb>=0.5",
    "typer>=0.9",
    "rich>=13.0",
    "logfire>=2.0",
]

[project.scripts]
cobuilder = "cobuilder.__main__:main"
zerorepo = "cobuilder.repomap.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]
sandbox = [
    "docker>=7.0",
]
vectordb = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "functional: marks tests as functional (end-to-end) tests",
    "unit: fast unit tests",
    "integration: integration tests requiring external services",
    "e2e: full end-to-end pipeline tests",
]
addopts = "--cov=cobuilder --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["cobuilder"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "cobuilder/__main__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.wheel]
packages = ["cobuilder"]
